--- a/netlify.toml
+++ b/netlify.toml
@@ -274,7 +274,7 @@
 
 [[redirects]]
   from = "/latest/how-tos/basic-data-operations/export-data-out-pachyderm/export-data-egress/"
-  to = "/latest/export-data/export-data-egress
+  to = "/latest/export-data/export-data-egress"
   status = 301
   force = true
 
