--- a/hugo.yaml
+++ b/hugo.yaml
@@ -90,4 +90,11 @@ markup:
     tabWidth: 4
 
 
-    
+security:
+  exec:
+    allow:
+      - '^dart-sass-embedded$'
+      - '^go$'
+      - '^npx$'
+      - '^postcss$'
+      - '^rst2html.py$'
