--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pip install -r requirements.txt && hugo && rst2html.py --halt=warning -v -e utf-8 --no-generator --no-source-link public/**/*.html"
+  command = "pip install -r requirements.txt && hugo --minify"
   publish = "public"
 
 
