--- a/netlify.toml
+++ b/netlify.toml
@@ -4,742 +4,7 @@
       Access-Control-Allow-Origin = "*"
 
 [[redirects]]
-  from = "/latest/concepts/"
-  to = "/latest/learn/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/advanced-concepts/"
-  to = "/latest/learn/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/"
-  to = "/latest/learn/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/"
-  to = "/latest/learn/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/"
-  to = "/latest/learn/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/overview/"
-  to = "/latest/learn/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/overview/:splat"
-  to = "/latest/learn/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/developer-workflow/"
-  to = "/latest/learn/developer-workflow/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/developer-workflow/:splat"
-  to = "/latest/learn/developer-workflow/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/advanced-concepts/globalid"
-  to = "/latest/learn/glossary/globalid"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/datum"
-  to = "/latest/learn/glossary/datum"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/job"
-  to = "/latest/learn/glossary/job"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/pipeline"
-  to = "/latest/learn/glossary/pipeline"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/advanced-concepts/deferred-processing"
-  to = "/latest/learn/glossary/deferred-processing"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/advanced-concepts/distributed-computing"
-  to = "/latest/learn/glossary/distributed-computing"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/branch"
-  to = "/latest/learn/glossary/branch"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/commit"
-  to = "/latest/learn/glossary/commit"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/file"
-  to = "/latest/learn/glossary/file"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/provenance"
-  to = "/latest/learn/glossary/provenance"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/history"
-  to = "/latest/learn/glossary/history"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/data-concepts/repo"
-  to = "/latest/learn/glossary/input-repo"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/console-guide/"
-  to = "/latest/learn/console-guide"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/console-guide/:splat"
-  to = "/latest/learn/console-guide/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/"
-  to = "/latest/get-started/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/clients/"
-  to = "/latest/get-started/clients"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/beginner-tutorial/"
-  to = "/latest/get-started/beginner-tutorial"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/"
-  to = "/latest/set-up/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/helm-values/"
-  to = "/latest/set-up/helm-values/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/helm-values/:splat"
-  to = "/latest/set-up/helm-values/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/pipeline-spec/:splat"
-  to = "/latest/build-dags/pipeline-spec/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/s3gateway-api/"
-  to = "/latest/set-up/s3gateway-api"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/tracing/"
-  to = "/latest/set-up/tracing"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/deploy-w-tls/"
-  to = "/latest/set-up/tls"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/rbac/"
-  to = "/latest/set-up/rbac"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/install-pachctl-completion/"
-  to = "/latest/set-up/pachctl-autocomplete"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/on-premises/"
-  to = "/latest/set-up/on-prem"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/namespaces/"
-  to = "/latest/set-up/namespaces"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/loki/"
-  to = "/latest/set-up/loki"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/console/:splat"
-  to = "/latest/set-up/cloud-deploy/console/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/console/"
-  to = "/latest/set-up/cloud-deploy/console/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/google-cloud-platform/"
-  to = "/latest/set-up/cloud-deploy/gcp/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/azure/"
-  to = "/latest/set-up/cloud-deploy/azure/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/aws-deploy-pachyderm/"
-  to = "/latest/set-up/cloud-deploy/aws/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/deploy-manage/deploy/aws-secret-manager/"
-  to = "/latest/set-up/cloud-deploy/aws-secret-manager"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/"
-  to = "/latest/set-up/enterprise"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/overview/"
-  to = "/latest/set-up/enterprise/overview"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/activate-via-pachctl/"
-  to = "/latest/set-up/enterprise/activate-via-pachctl"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/activate-via-helm/"
-  to = "/latest/set-up/enterprise/activate-via-helm/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/activate-auth/"
-  to = "/latest/set-up/authentication"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/environment-variables/"
-  to = "/latest/set-up/environment-variables"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/"
-  to = "/latest/set-up/connectors/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/connectors/"
-  to = "/latest/set-up/connectors/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/connectors/:splat"
-  to = "/latest/set-up/connectors/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/enterprise-server/"
-  to = "/latest/set-up/enterprise-server/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/enterprise-server/:splat"
-  to = "/latest/set-up/enterprise-server/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authorization/"
-  to = "/latest/set-up/authorization/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authorization/:splat"
-  to = "/latest/set-up/authorization/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/"
-  to = "/latest/set-up/authentication/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/:splat"
-  to = "/latest/set-up/authentication/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/local-deploy/"
-  to = "/latest/set-up/local-deploy/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/local-deploy/:splat"
-  to = "/latest/set-up/local-deploy/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/cloud-deploy/"
-  to = "/latest/set-up/cloud-deploy/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/getting-started/cloud-deploy/:splat"
-  to = "/latest/set-up/cloud-deploy/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/helm-install/"
-  to = "/latest/manage/secrets"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/prometheus/"
-  to = "/latest/manage/prometheus"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/prometheus/job-metrics"
-  to = "/latest/manage/prometheus/job-metrics"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/deploy/prometheus/pachd-metrics"
-  to = "/latest/manage/prometheus/pachd-metrics"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/check-user/"
-  to = "/latest/manage/check-user"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/deactivate-auth/"
-  to = "/latest/manage/deactivate-auth"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/supported-releases/"
-  to = "/latest/manage/supported-releases"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/scaling-limits/"
-  to = "/latest/manage/scaling-limits"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/advanced-data-operations/secrets/"
-  to = "/latest/manage/secrets"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/manage/"
-  to = "/latest/manage/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/revoke-user/"
-  to = "/latest/manage/revoke-user/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/check-user/"
-  to = "/latest/manage/check-user/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/deactivate-auth/"
-  to = "/latest/manage/deactivate-auth/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/enterprise/auth/authentication/login/"
-  to = "/latest/manage/login/"
-  status = 301
-  force = true
-
-
-[[redirects]]
-  from = "/latest/deploy-manage/manage/:splat"
-  to = "/latest/manage/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/deploy-manage/manage/s3gateway/:splat"
-  to = "/latest/manage/s3gateway/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/advanced-data-operations/mount-volume/"
-  to = "/latest/prepare-data/mount-volume"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/removing-data-from-pachyderm/"
-  to = "/latest/prepare-data/removing-data"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "latest/how-tos/basic-data-operations/load-data-into-pachyderm/"
-  to = "/latest/prepare-data/ingest-data"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/advanced-data-operations/err-cmd/"
-  to = "/latest/prepare-data/err-cmd"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/sql-ingest/"
-  to = "/latest/prepare-data/sql-ingest"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/advanced-data-operations/time-windows/"
-  to = "/latest/prepare-data/time-windows"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/advanced-data-operations/use-transactions-to-run-multiple-commands/"
-  to = "/latest/prepare-data/transactions"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/"
-  to = "/latest/build-dags/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/pipeline-operations/"
-  to = "/latest/build-dags/pipeline-operations/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/pipeline-operations/:splat"
-  to = "/latest/build-dags/pipeline-operations/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/pipeline-spec/"
-  to = "/latest/build-dags/pipeline-spec/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/datum/join/"
-  to = "/latest/build-dags/pipeline-spec/input-join"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/datum/group/"
-  to = "/latest/build-dags/pipeline-spec/input-group"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/datum/cross-union/"
-  to = "/latest/build-dags/pipeline-spec/input-cross/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/concepts/pipeline-concepts/datum/metadata/"
-  to = "/latest/build-dags/datum-operations/get-metadata/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/pipeline-spec/:splat"
-  to = "/latest/build-dags/pipeline-spec/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/project-operations/"
-  to = "/latest/build-dags/project-operations/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/project-operations/:splat"
-  to = "/latest/build-dags/project-operations/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/advanced-data-operations/"
-  to = "/latest/build-dags/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/"
-  to = "/latest/build-dags/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/export-data-out-pachyderm/sql-egress/"
-  to = "/latest/export-data/sql-egress"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/export-data-out-pachyderm/export-data-egress/"
-  to = "/latest/export-data/export-data-egress"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/export-data-out-pachyderm/export-data-pachctl/"
-  to = "/latest/export-data/export-data-pachctl"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/basic-data-operations/export-data-out-pachyderm/mount-repo-to-local-computer/"
-  to = "/latest/export-data/mount-repo-to-local-computer"
-  status = 301
-  force = true
-
-
-[[redirects]]
-  from = "/latest/how-tos/s3-gateway-operations/"
-  to = "/latest/export-data/s3-gateway-operations"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/s3-gateway-operations/:splat"
-  to = "/latest/export-data/s3-gateway-operations/:splat"
-  status = 301
-  force = true
-
-
-[[redirects]]
-  from = "/latest/how-tos/jupyterlab-extension/"
-  to = "/latest/integrate/jupyterlab-extension/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/jupyterlab-extension/:splat"
-  to = "/latest/integrate/jupyterlab-extension/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/pachctl/"
-  to = "/latest/run-commands/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/reference/pachctl/:splat"
-  to = "/latest/run-commands/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/debugging-operations/"
-  to = "/latest/debug/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/debugging-operations/:splat"
-  to = "/latest/debug/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/troubleshooting/pipeline-troubleshooting"
-  to = "/latest/debug/pipelines"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/troubleshooting/deploy-troubleshooting"
-  to = "/latest/debug/deployment"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/troubleshooting/general-troubleshooting"
-  to = "/latest/debug/common-issues"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/troubleshooting/"
-  to = "/latest/debug/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/debugging-operations/view-user-logs/"
-  to = "/latest/debug/view-user-logs"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/how-tos/debugging-operations/view-k8s-events/"
-  to = "/latest/debug/view-k8s-events"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/contributing/"
-  to = "/latest/contribute/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/latest/contributing/:splat"
-  to = "/latest/contribute/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/2.6.x/*"
-  to = "/latest/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/2.3.x/*"
-  to = "https://docs.pachyderm.com/archive"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/2.2.x/*"
-  to = "https://docs.pachyderm.com/archive"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/2.1.x/*"
-  to = "https://docs.pachyderm.com/archive"
+  from = "/:splat"
+  to = "https://hpe-ai-solutions-documentation.netlify.app/products/mldm/:splat"
   status = 301
   force = true
